--- a/pages/Error.html
+++ b/pages/Error.html
@@ -38,7 +38,7 @@
                     </p>
                 </div>
                 <div class="error__nav e-nav">
-                    <a href="Eportfolio.html" class="e-nav__link"></a>
+                    <a href="" class="e-nav__link"></a>
                 </div>
             </div>
             <!-- END Content -->
